--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </label>
             <div
               tabindex="0"
-              class="mt-3 card card-compact dropdown-content w-80 sm:w-96 bg-base-100 shadow"
+              class="mt-3 card card-compact dropdown-content w-80 sm:w-fit bg-base-100 shadow"
             >
               <div class="card-body">
                 <p class="font-bold text-xl text-warning cantidad-articulos"></p>
