--- a/src/pages/editar-producto.html
+++ b/src/pages/editar-producto.html
@@ -99,8 +99,14 @@
 
                             <div class="mb-4">
                                 <label class="block text-gray-700 text-sm font-bold" for="imagen">Imagen</label>
+                                <input
+                                id="upload_widget"
+                                type="button"
+                                class="bg-slate-600 hover:bg-slate-900 mt-5 p-2 text-white uppercase font-bold w-full md:w-1/3 hover:cursor-pointer"
+                                value="Subir Imagen"
+                            />
                                 <input 
-                                    class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                                    class="appearance-none border rounded mt-5 py-2 ml-2 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                                     id="imagen"
                                     name="imagen"
                                     type="text"
@@ -184,6 +190,7 @@
         </div>
       </div>
     </footer>
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script> 
     <script src="../scripts/editarProducto.js" type="module"></script>
 </body>
 </html>
