--- a/src/pages/nuevo-producto.html
+++ b/src/pages/nuevo-producto.html
@@ -22,7 +22,7 @@
                 >Nuevo Producto</a>
             </nav>
         </aside> <!--sidebar-->
-        <main class="md:w-3/5  xl:w-4/5 px-5 py-10">
+        <main class="md:w-3/5  xl:w-4/5 md:px-5 py-10">
             <h2 class="text-3xl text-center font-bold">Nuevo Producto</h2>
 
             <div class="flex flex-col mt-10 items-center">
@@ -97,8 +97,14 @@
 
                             <div class="mb-4">
                                 <label class="block text-gray-700 text-sm font-bold" for="imagen">Imagen</label>
+                                <input
+                                id="upload_widget"
+                                type="button"
+                                class="bg-slate-600 hover:bg-slate-900 mt-5 p-2 text-white uppercase font-bold w-full md:w-1/3 hover:cursor-pointer"
+                                value="Subir Imagen"
+                            />
                                 <input 
-                                    class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                                    class="appearance-none border rounded mt-5 py-2 ml-2 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                                     id="imagen"
                                     name="imagen"
                                     type="text"
@@ -110,7 +116,7 @@
 
                             <input
                                 type="submit"
-                                class="bg-slate-600 hover:bg-slate-900 w-full mt-5 p-2 text-white uppercase font-bold"
+                                class="bg-slate-600 hover:bg-slate-900 w-full mt-5 p-2 text-white uppercase font-bold hover:cursor-pointer"
                                 value="Agregar Producto"
                             />
                         </form>
@@ -184,6 +190,7 @@
       </div>
     </footer>
     
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
     <script src="../scripts/nuevoProducto.js" type="module"></script>
 </body>
 </html>
