Se agrega barra de busqueda rapida

--- a/src/pages/checkout.html
+++ b/src/pages/checkout.html
@@ -8,9 +8,9 @@
     <title>SportsJS - Ecommerce</title>
   </head>
   <body>
-    <header class="mt-2">
+    <header class="mt-2 shadow-sm shadow-yellow-300">
       <div
-        class="navbar bg-base-100 shadow-xl rounded-box flex flex-col md:flex-row justify-around md:justify-between container mx-auto"
+        class="navbar bg-base-100 shadow-xl rounded-box flex flex-col md:flex-row justify-around md:justify-between container mx-auto "
       >
         <!--Logo-->
         <div>
@@ -100,7 +100,7 @@
             <div class="w-full text-2xl p-4 font-bold">
                 <p>Subtotal: <span id="subtotal" class="font-normal"></span></p>
                 <p>Impuestos (21%): <span id="impuestos" class="font-normal">#</span></p>
-                <p>Envio: <span class="font-normal">Grátis</span></p>
+                <p>Envio: <span class="font-normal">Gratis</span></p>
 
                 <p class="text-4xl mt-5">Total a pagar: <span id="total" class="font-normal"></span></p>
             </div>
