--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <title>SportsJS - Ecommerce</title>
   </head>
   <body>
-    <header class="mt-2">
-      <div class="navbar bg-base-100 shadow-xl rounded-box flex flex-col md:flex-row justify-around md:justify-between container mx-auto">
+    <header class="mt-2 fixed w-full z-10">
+      <div class="navbar bg-base-100 shadow-md shadow-warning/80 rounded-box flex flex-col md:flex-row justify-around md:justify-between container mx-auto md:px-10">
 
-      
         <!--Logo-->
         <div>
           <a class="btn btn-ghost normal-case text-3xl text-yellow-500">
@@ -57,15 +56,9 @@
             </label>
             <ul
               tabindex="0"
-              class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box max-w-52"
+              class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-[150px]"
             >
-              <li>
-                <a class="justify-between">
-                  Profile
-                  <span class="badge">New</span>
-                </a>
-              </li>
-              <li><a href="./src/pages/login.html">Ingresar</a></li>
+              <li><a href="./src/pages/login.html">Ingreso Admin</a></li>
               <li><a>Logout</a></li>
             </ul>
           </div>
@@ -99,7 +92,7 @@
               </label>
               <div
                 tabindex="0"
-                class="mt-3 card card-compact dropdown-content w-80 sm:w-fit bg-base-100 shadow"
+                class="mt-3 card card-compact dropdown-content w-80 sm:w-fit bg-base-100 shadow overflow-scroll max-h-[300px] md:max-h-[600px] md:overflow-auto"
               >
                 <div class="card-body">
                   <p
@@ -151,11 +144,26 @@
         <div class="hero-content text-center text-neutral-content">
           <div class="max-w-md text-teal-100">
             <h1 class="mb-5 text-6xl font-bold">Bienvenido</h1>
-            <p class="mb-5 text-2xl text-left leading-10">
+            <p class="mb-5 text-2xl leading-10">
               En SportsJS nos especializamos en productos deportivos y todo lo
-              que necesitas para rendir al máximo. <br>
-              Ademas contamos con envios gratuitos a todo el país.
+              que necesitas para rendir al máximo.
             </p>
+
+            <form action="" id="busqueda-rapida">
+              <div class="flex flex-wrap -mx-3 mb-6">
+                <div class="w-full py-2 block appearance-none bg-gray-200 text-gray-700 first-line:border border-gray-200 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 rounded-full">
+                  <input
+                    class="py-2 pl-4 bg-transparent"
+                    id="busqueda-input"
+                    type="text"
+                    placeholder="Ej: Nike, Running, etc."
+                  />
+                  <button class="bg-gray-900 px-4 py-2 uppercase text-gray-50 rounded-full hover:cursor-pointer hover:bg-gray-700">
+                    Buscar
+                  </button>
+                </div>
+              </div>
+            </form>
             
           </div>
         </div>
