styles: Se agregan enlaces al footer, y se arreglan estilos del header

--- a/src/pages/checkout.html
+++ b/src/pages/checkout.html
@@ -8,9 +8,9 @@
     <title>SportsJS - Ecommerce</title>
   </head>
   <body>
-    <header class="mt-2 shadow-sm shadow-yellow-300">
+    <header class="mt-2 " >
       <div
-        class="navbar bg-base-100 shadow-xl rounded-box flex flex-col md:flex-row justify-around md:justify-between container mx-auto "
+        class="navbar bg-base-100 rounded-box flex flex-col md:flex-row justify-around md:justify-between container mx-auto shadow-sm shadow-yellow-300"
       >
         <!--Logo-->
         <div>
@@ -68,16 +68,11 @@
             </label>
             <ul
               tabindex="0"
-              class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box max-w-52"
+              class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-[150px]"
             >
-              <li>
-                <a class="justify-between">
-                  Profile
-                  <span class="badge">New</span>
-                </a>
-              </li>
-              <li><a href="../pages/login.html">Ingresar</a></li>
-              <li><a>Logout</a></li>
+          
+              <li><a href="../pages/login.html" class="hover:bg-warning hover:text-black">Ingreso Admin</a></li>
+              <li><a class="hover:bg-warning hover:text-black">Logout</a></li>
             </ul>
           </div>
 
@@ -218,10 +213,10 @@
       </dialog>
     </main>
 
-    <footer class="footer footer-center p-10 bg-warning text-zinc-900 mt-16">
+    <footer class="footer footer-center p-5 bg-warning text-zinc-900 mt-16">
       <div>
-        <a href="#"
-          ><img src="./src/assets/sportFooter.png" alt="" class="w-24 mr-4"
+        <a href="../../index.html"
+          ><img src="../assets/sportFooter.png" alt="" class="w-24 mr-4"
         /></a>
         <p class="font-bold">Sports JS. <br />Tienda deportiva</p>
         <p>Proyecto Educativo - CoderHouse</p>
@@ -231,7 +226,7 @@
         <div class="grid grid-flow-col gap-4 mt-0">
           <a
             href="https://www.linkedin.com/in/julian-martinez-dev/"
-            target="_blanj"
+            target="_blank"
             rel="noreferrer noopenener"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
@@ -255,29 +250,16 @@
               /></svg
           ></a>
           <a
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              class="fill-current"
-            >
-              <path
-                d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"
-              ></path></svg
-          ></a>
-          <a
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              class="fill-current"
-            >
-              <path
-                d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"
-              ></path></svg
-          ></a>
+            href="https://github.com/julianmartinez-dev/sportsJS"
+            target="_blank"
+            rel="noreferrer noopenener"
+          >
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+            </svg>
+          </a>
+          
         </div>
       </div>
     </footer>
