Proyecto listo para produccion, se realiza el build

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./dist/output.css">
     <title>SportsJS - Ecommerce</title>
   </head>
   <body>
@@ -14,7 +13,7 @@
         <!--Logo-->
         <div>
           <a class="btn btn-ghost normal-case text-3xl text-yellow-500">
-            <img src="./src/assets/sport.png" alt="imagen logo" class="w-10 mr-4" />Sports JS
+            <img src="./assets/sport.png" alt="imagen logo" class="w-10 mr-4" />Sports JS
           </a>
         </div>
 
@@ -51,14 +50,14 @@
           <div class="dropdown dropdown-end">
             <label tabindex="0" class="btn btn-ghost" title="Ingresar al panel de administracion">
               <div class="w-10 rounded-full">
-                <img src="./src/assets/icons8-admin-64.png" />
+                <img src="./assets/icons8-admin-64.png" />
               </div>
             </label>
             <ul
               tabindex="0"
               class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-[150px]"
             >
-              <li><a href="./src/pages/login.html" class="hover:bg-warning hover:text-black">Ingreso Admin</a></li>
+              <li><a href="./pages/login.html" class="hover:bg-warning hover:text-black">Ingreso Admin</a></li>
               <li><a class="hover:bg-warning hover:text-black">Logout</a></li>
             </ul>
           </div>
@@ -119,7 +118,7 @@
                       Vaciar Carrito
                     </button>
                     <a
-                      href="./src/pages/checkout.html"
+                      href="./pages/checkout.html"
                       class="btn btn-warning btn-block"
                       id="terminar-compra"
                       >Terminar compra</a
@@ -138,7 +137,7 @@
       <!--hero-->
       <div
         class="hero min-h-screen"
-        style="background-image: url(./src/assets/hero.jpg)"
+        style="background-image: url(./assets/hero.jpg)"
       >
         <div class="hero-overlay bg-opacity-60"></div>
         <div class="hero-content text-center text-neutral-content">
@@ -227,7 +226,7 @@
     <footer class="footer footer-center p-5 bg-warning text-zinc-900 mt-16">
       <div>
         <a href="#"
-          ><img src="./src/assets/sportFooter.png" alt="" class="w-24 mr-4"
+          ><img src="./assets/sportFooter.png" alt="" class="w-24 mr-4"
         /></a>
         <p class="font-bold">Sports JS. <br />Tienda deportiva</p>
         <p>Proyecto Educativo - CoderHouse</p>
