styles: Se cambia responsive del header
Ahora cuando estamos en mobile el logo no se muestra

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
 
         <!--Logo-->
         <div>
-          <a class="btn btn-ghost normal-case text-3xl text-yellow-500">
+          <a class="btn btn-ghost normal-case text-3xl text-yellow-500 hidden md:flex">
             <img src="./assets/sport.png" alt="imagen logo" class="w-10 mr-4" />Sports JS
           </a>
         </div>
 
-        <div class=" gap-3 flex justify-around md:justify-end w-full mt-5 md:mt-0">
+        <div class=" gap-3 flex justify-around md:justify-end w-full mt-0">
           <!--Boton dark/light mode-->
           <label class="swap swap-rotate" title="Modo oscuro On/Off">
             <!-- this hidden checkbox controls the state -->
