--- a/src/pages/checkout.html
+++ b/src/pages/checkout.html
@@ -13,7 +13,7 @@
       >
         <!--Logo-->
         <div>
-          <a class="btn btn-ghost normal-case text-3xl text-yellow-500" href="../../index.html">
+          <a class="btn btn-ghost normal-case text-3xl text-yellow-500" href="../index.html">
             <img
               src="../assets/sport.png"
               alt="imagen logo"
